[tool.poetry]
name = "rcdqn"
version = "0.1.0"
description = ""
authors = ["Daniel Manning <danielmanning213@gmail.com>"]



[tool.poetry.dependencies]
python = ">=3.7,<3.11"
jericho = "2.4.2"
spacy = "2.2.3"
future = "^0.18.2"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.12.0%2Bcu113-cp37-cp37m-linux_x86_64.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

